--- a/vkladki/vkladki.Android/vkladki.Android.csproj
+++ b/vkladki/vkladki.Android/vkladki.Android.csproj
@@ -88,7 +88,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Resources\drawable\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\vkladki\vkladki.csproj">
       <Project>{2EA3B6FB-CCE3-4D11-A3EC-67666055825F}</Project>
@@ -99,9 +101,6 @@
     <Page Include="decabr.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\makvin.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
